--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "@gewaer/gw-settings",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "description": "Base settings component for the Gewaer platform.",
   "main": "./dist/gw-settings.umd.min.js",
   "files": [
     "dist/gw-settings.umd.min.js",
-    "dist/gw-settings.css",
-    "src/assets"
+    "dist/gw-settings.css"
   ],
   "scripts": {
     "serve": "vue-cli-service serve",
