--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,6 @@
 {
     "plugins": [
-        "@babel/syntax-dynamic-import"
+        "@babel/syntax-dynamic-import",
+        "transform-remove-console"
     ]
 }
