--- a/package.json
+++ b/package.json
@@ -27,28 +27,31 @@
     "lint"
   ],
   "dependencies": {
-    "@babel/polyfill": "^7.6.0",
-    "@uppy/core": "^1.2.0",
-    "@uppy/dashboard": "^1.2.0",
-    "@uppy/file-input": "^1.2.0",
-    "@uppy/google-drive": "^1.2.0",
-    "@uppy/url": "^1.2.0",
-    "@uppy/xhr-upload": "^1.2.0",
+    "@uppy/core": "^1.6.0",
+    "@uppy/dashboard": "^1.5.0",
+    "@uppy/file-input": "^1.4.0",
+    "@uppy/google-drive": "^1.3.3",
+    "@uppy/url": "^1.4.0",
+    "@uppy/xhr-upload": "^1.4.0",
+    "core-js": "^3.4.3",
     "is-url": "^1.2.4",
     "lodash": "^4.17.15",
     "uuid": "^3.3.3",
     "vue": "^2.6.10",
-    "vue-stripe-elements-plus": "^0.3.0",
+    "vue-stripe-elements-plus": "^0.3.2",
     "vue2-dropzone": "^3.6.0",
-    "vuex": "^3.1.1"
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@vue/cli-plugin-babel": "^3.11.0",
-    "@vue/cli-plugin-eslint": "^3.11.0",
-    "@vue/cli-service": "^3.11.0",
-    "eslint": "^6.3.0",
-    "node-sass": "^4.12.0",
+    "@vue/cli-plugin-babel": "^4.0.5",
+    "@vue/cli-plugin-eslint": "^4.0.5",
+    "@vue/cli-service": "^4.0.5",
+    "babel-eslint": "^10.0.3",
+    "babel-plugin-transform-remove-console": "^6.9.4",
+    "eslint": "^6.7.1",
+    "eslint-plugin-vue": "^6.0.1",
+    "node-sass": "^4.13.0",
     "pre-commit": "^1.2.2",
     "sass-loader": "^8.0.0",
     "vue-template-compiler": "^2.6.10"
