--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "is-url": "^1.2.4",
     "lodash": "^4.17.15",
     "uuid": "^3.3.3",
+    "v-tooltip": "^2.0.2",
     "vue": "^2.6.10",
     "vue-stripe-elements-plus": "^0.3.2",
     "vue2-dropzone": "^3.6.0",
