--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "vue": "^2.6.10",
     "vue-stripe-elements-plus": "^0.3.2",
     "vue2-dropzone": "^3.6.0",
+    "vuedraggable": "^2.23.2",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
