--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "core-js": "^3.6.4",
     "is-url": "^1.2.4",
     "lodash": "^4.17.15",
+    "pretty-checkbox-vue": "^1.1.9",
     "uuid": "^7.0.1",
     "v-tooltip": "^2.0.3",
     "vue": "^2.6.11",
