--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "vue-stripe-elements-plus": "^0.3.2",
     "vue2-dropzone": "^3.6.0",
     "vuedraggable": "^2.23.2",
+    "vuetable-2": "^2.0.0-beta.4",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
