--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
     "precommit": [
         "lint"
     ],
+    "peerDependencies": {
+        "moment": "^2.29.1",
+        "vue-form-wizard": "^0.8.4"
+    },
     "dependencies": {
         "@gewaer/gw-browse": "git+ssh://git@github.com/gewaer/gw-browse.git#v0.2.8",
         "@uppy/core": "^1.8.2",
