--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     ],
     "peerDependencies": {
         "moment": "^2.29.1",
-        "vue-form-wizard": "^0.8.4"
+        "vue-form-wizard": "^0.8.4",
+        "@gewaer/vue-form-generator": "git+ssh://git@github.com/gewaer/vue-form-generator.git#v0.2.0"
     },
     "dependencies": {
         "@gewaer/gw-browse": "git+ssh://git@github.com/gewaer/gw-browse.git#v0.2.9",
